--- a/Wpf/Views/MainWindow.xaml
+++ b/Wpf/Views/MainWindow.xaml
@@ -31,23 +31,26 @@
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
-        <TextBox x:Name="TitleBox"  TextWrapping="Wrap" Text="Title of a new note" 
+        <TextBox x:Name="TitleBox"  TextWrapping="Wrap"
+                 Text="{Binding NoteItem.Title}"
                  Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" FontSize="20" FontFamily="Arial Black" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="AuthorBox"  TextWrapping="Wrap" Text="Author" 
-         Grid.Column="3" Grid.Row="1" FontSize="12" FontFamily="Arial" TextAlignment="Right"/>
-        <TextBox x:Name="NoteBox"  TextWrapping="Wrap" Text="Note" 
-         Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="3" FontSize="12" FontFamily="Arial"
+        <TextBox x:Name="AuthorBox"  TextWrapping="Wrap" 
+                 Text="{Binding NoteItem.Author}"
+                 Grid.Column="3" Grid.Row="1" FontSize="12" FontFamily="Arial" TextAlignment="Right"/>
+        <TextBox x:Name="NoteBox"  TextWrapping="Wrap"
+                 Text="{Binding NoteItem.Note}"
+                 Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="3" FontSize="12" FontFamily="Arial"
                  MinHeight="100"/>
         <Button Content="Add note" Command="{Binding AddNoteCommand}"
                 Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3"/>
 
         <ListBox ItemsSource="{Binding AvailableItems}"
                  SelectedItem="{Binding SelectedItem}"
-                 DisplayMemberPath="Name"
+                 DisplayMemberPath="Title"
                  Height="200" Width="360"
                  Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3"/>
 
-        <Button Content="Add" Command="{Binding ShowSelectedItemCommand}"
+        <Button Content="Show" Command="{Binding ShowSelectedItemCommand}"
                 Grid.Column="2" Grid.Row="7"/>
         <Button Content="Delete" Command="{Binding DeleteSelectedItemCommand}"
                 Grid.Column="3" Grid.Row="7"/>
